--- a/config/site/system.theme.yml
+++ b/config/site/system.theme.yml
@@ -1,4 +1,4 @@
-admin: material_admin
+admin: adminimal_theme
 default: eses
 _core:
   default_config_hash: fOjer9hADYYnbCJVZMFZIIM1azTFWyg84ZkFDHfAbUg
