Fixing permission issues and lables around reordering

--- a/config/site/user.role.pta_board_member.yml
+++ b/config/site/user.role.pta_board_member.yml
@@ -12,6 +12,7 @@ permissions:
   - 'access contextual links'
   - 'access draggableviews'
   - 'access toolbar'
+  - 'administer nodes'
   - 'change own username'
   - 'clone node entity'
   - 'create announcement content'
