--- a/config/site/views.view.fundraisers.yml
+++ b/config/site/views.view.fundraisers.yml
@@ -28,7 +28,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'access content'
+          perm: 'administer nodes'
       cache:
         type: tag
         options: {  }
