--- a/config/site/core.entity_form_display.node.resource_page.default.yml
+++ b/config/site/core.entity_form_display.node.resource_page.default.yml
@@ -37,6 +37,7 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
     region: content
   publish_on:
@@ -75,5 +76,6 @@ hidden:
   created: true
   path: true
   promote: true
+  revision_log: true
   sticky: true
   uid: true
