--- a/config/site/core.entity_form_display.node.testimonial.default.yml
+++ b/config/site/core.entity_form_display.node.testimonial.default.yml
@@ -41,6 +41,7 @@ hidden:
   path: true
   promote: true
   publish_on: true
+  revision_log: true
   sticky: true
   uid: true
   unpublish_on: true
