--- a/web/modules/contrib/hide_revision_field/hide_revision_field.permissions.yml
+++ b/web/modules/contrib/hide_revision_field/hide_revision_field.permissions.yml
@@ -1,6 +1,6 @@
-administer personalized revision visibilty:
-  title: 'Administer own revision field visibility.'
-  description: 'Set personalized revision field visibilty if enabled per entity bundle.'
-view revision field:
-  title: 'View Revision Field.'
+administer revision field personalization:
+  title: 'Administer own revision field display.'
+  description: 'Set personalized revision field visibility if enabled per entity/bundle.'
+access revision field:
+  title: 'Control Revision Messages.'
   description: 'View and use the revision field if enabled per entity bundle.'
