--- a/web/composer.json
+++ b/web/composer.json
@@ -38,7 +38,8 @@
         "drupal/config_split": "^1.3",
         "drupal/redirect_after_login": "^2",
         "drupal/handy_cache_tags": "^1.0",
-        "drupal/material_admin": "^1.0@alpha"
+        "drupal/material_admin": "^1.0@alpha",
+        "drupal/honeypot": "^1.29"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
