--- a/config/site/core.entity_form_display.block_content.basic.default.yml
+++ b/config/site/core.entity_form_display.block_content.basic.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - block_content.type.basic
     - field.field.block_content.basic.body
   module:
+    - hide_revision_field
     - text
 _core:
   default_config_hash: e1Nu5xXAuF_QplbBUhQBPLnYWvHtDX0MkZnpuCiY8uM
@@ -29,6 +30,18 @@ content:
     region: content
     settings:
       size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  revision_log:
+    type: hide_revision_field_log_widget
+    weight: 80
+    region: content
+    settings:
+      show: true
+      default: ''
+      permission_based: false
+      allow_user_settings: true
+      rows: '5'
       placeholder: ''
     third_party_settings: {  }
 hidden: {  }
