--- a/config/site/core.entity_form_display.user.user.default.yml
+++ b/config/site/core.entity_form_display.user.user.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - image.style.thumbnail
   module:
     - image
+    - path
     - user
 _core:
   default_config_hash: K-1rBM8mTIkFp9RqOC2tMRUukOQ1xbRCfSKK8dEddnA
