--- a/config/site/core.entity_view_display.user.user.compact.yml
+++ b/config/site/core.entity_view_display.user.user.compact.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
+    - field.field.user.user.field_job_title
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -26,4 +27,5 @@ content:
     third_party_settings: {  }
     label: hidden
 hidden:
+  field_job_title: true
   member_for: true
