--- a/config/site/views.view.calendar.yml
+++ b/config/site/views.view.calendar.yml
@@ -20,7 +20,6 @@ description: 'A list of Calendar Events'
 tag: ''
 base_table: node_field_data
 base_field: nid
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -481,6 +480,8 @@ display:
           id: status
           expose:
             operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
           group: 1
         type:
           id: type
@@ -491,6 +492,9 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
         field_calendar_event_date_value:
           id: field_calendar_event_date_value
           table: node__field_calendar_event_date
@@ -521,6 +525,8 @@ display:
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
